# seqfreq

./: .gitignore  LICENSE  default.nix  seqfreq.cabal
src/: Main.hs
