name:                seqfreq
version:             0.1.0.0
synopsis:            Count frequent subsequeces
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Itai Zukerman
maintainer:          zukerman@math-hat.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable seqfreq
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       array,
                       bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010