name:                seqfreq
version:             0.1.0.0
synopsis:            Count frequent subsequeces
description:
    Find approximate counts of frequent subsequences in binary input.
license:             BSD3
license-file:        LICENSE
author:              Itai Zukerman
maintainer:          zukerman@math-hat.com
build-type:          Simple
cabal-version:       >=1.10

executable seqfreq
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       array,
                       bytestring,
                       deepseq,
                       optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Werror -Wall
